--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Translate
-  </title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Language Translator</title>
+    <link rel="icon" type="" href="img/cap.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <textarea class="big-text-box"></textarea>
-  </div>
+    <div class="container">
+        <h1 class="mt-5 mb-4">Translator</h1>
+        <div id="google_translate_element"></div> <!-- Container for the Google Translate widget -->
+        <div class="form-group">
+            <label for="wordInput">Write Here:</label>
+            <input type="text" class="form-control" id="wordInput">
+        </div>
+        <div class="form-group">
+            <label for="languageSelect">Select a language:</label>
+            <select class="form-control" id="languageSelect">
+                <option value="es">Spanish</option> <!-- Spanish option -->
+            </select>
+        </div>
+        <button type="button" class="btn btn-primary" id="translateBtn">Translate</button>
+        <div id="translationResult" class="mt-3"></div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@uppy/core@1/dist/uppy.min.js"></script>
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
